[package]
name = "mailman"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
probe-rs = "0.6.0"
probe-rs-rtt = "0.1.0"
structopt = "0.3.11"
tui = "0.8.0"
termion = "1.5.0"
unicode-width = "0.1.7"